package com.unisa.cinehub.views.homepage;

public class FooterView {
}
