@startuml

title __HOMEPAGE's Class Diagram__\n

  namespace com.unisa.cinehub {
    namespace views.homepage {
      class com.unisa.cinehub.views.homepage.FooterView {
      }
    }
  }
  

  namespace com.unisa.cinehub {
    namespace views.homepage {
      class com.unisa.cinehub.views.homepage.HomepageView {
          + HomepageView()
          - prepare()
      }
    }
  }
  

  com.unisa.cinehub.views.homepage.HomepageView -up-|> com.vaadin.flow.component.html.Div
  com.unisa.cinehub.views.homepage.HomepageView o-- com.unisa.cinehub.control.CatalogoControl : catalogoControl


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
